enhance optimization & onnx runner